sync with Gluu Server 4.0.b1